k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hospital-backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hospital-backend
  template:
    metadata:
      labels:
        app: hospital-backend
    spec:
      containers:
        - name: hospital-backend
          image: shahaly/hospital-mern-stack-backend:v1
          imagePullPolicy: Always # Never
          ports:
            - containerPort: 5000
