k8s/dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hospital-dashboard-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hospital-dashboard
  template:
    metadata:
      labels:
        app: hospital-dashboard
    spec:
      containers:
        - name: hospital-dashboard
          image: docker.io/shahaly/hospital-mern-stack-dashboard:github-sha-1e253b721ae16eaf70e437f021abd5daaff05bc3
          imagePullPolicy: Always # Never
          ports:
            - containerPort: 80
