k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hospital-frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hospital-frontend
  template:
    metadata:
      labels:
        app: hospital-frontend
    spec:
      containers:
        - name: hospital-frontend
          image: docker.io/shahaly/hospital-mern-stack-frontend:github-sha-1b31acc2aa5f2ec74a53553e710fe6d8ed401901
          imagePullPolicy: Always # Never
          ports:
            - containerPort: 80
