k8s/dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hospital-dashboard-service
spec:
  type: NodePort
  selector:
    app: hospital-dashboard
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30081
